fix layout issues

--- a/assets/src/components/common/LoadingSpinner.scss
+++ b/assets/src/components/common/LoadingSpinner.scss
@@ -1,7 +1,8 @@
+@import 'authoring';
 
 .LoadingSpinner {
   text-align: center;
-  color: gray;
+  color: $gray-500;
 
   & i {
     margin: "0 5px";
